php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #48780 mysqlnd compile failure
Submitted: 2009-07-02 18:15 UTC Modified: 2009-08-25 14:26 UTC
Votes:7
Avg. Score:4.7 ± 0.7
Reproduced:7 of 7 (100.0%)
Same Version:6 (85.7%)
Same OS:5 (71.4%)
From: lneve at mail dot nih dot gov Assigned: mysql (profile)
Status: Closed Package: MySQL related
PHP Version: 5.3.0 OS: Solaris 10 (sparc)
Private report: No CVE-ID: None
 [2009-07-02 18:15 UTC] lneve at mail dot nih dot gov
Description:
------------
PHP build fails when compiling file mysqlnd_ps_codec.c. The error is 
"`MYSQLND_LLU_SPEC' undeclared".

Reproduce code:
---------------
/bin/sh /opt/php-5.3.0/libtool --silent --preserve-dup-deps --mode=compile gcc  -Iext/mysqlnd/ -I/opt/php-5.3.0/ext/mysqlnd/ -DPHP_ATOM_INC -I/opt/php-5.3.0/include -I/opt/php-5.3.0/main -I/opt/php-5.3.0 -I/opt/php-5.3.0/ext/date/lib -I/opt/php-5.3.0/ext/ereg/regex -I/usr/local/include/libxml2 -I/usr/local/ssl/include -I/usr/sfw/include -I/usr/sfw/include/freetype2 -I/usr/local/include -I/usr/local/imap-2007d/include -I/opt/php-5.3.0/ext/mbstring/oniguruma -I/opt/php-5.3.0/ext/mbstring/libmbfl -I/opt/php-5.3.0/ext/mbstring/libmbfl/mbfl -I/opt/postgres/8.3-community/include -I/opt/php-5.3.0/ext/sqlite3/libsqlite -I/opt/php-5.3.0/TSRM -I/opt/php-5.3.0/Zend  -D_POSIX_PTHREAD_SEMANTICS  -I/usr/local/include   -c /opt/php-5.3.0/ext/mysqlnd/mysqlnd_ps_codec.c -o ext/mysqlnd/mysqlnd_ps_codec.lo 
In file included from /opt/php-5.3.0/ext/mysqlnd/mysqlnd.h:59,
                 from /opt/php-5.3.0/ext/mysqlnd/mysqlnd_ps_codec.c:23:
/opt/php-5.3.0/ext/mysqlnd/mysqlnd_portability.h:471:1: warning: "float8get" redefined
/opt/php-5.3.0/ext/mysqlnd/mysqlnd_portability.h:423:1: warning: this is the location of the previous definition
/opt/php-5.3.0/ext/mysqlnd/mysqlnd_portability.h:472:1: warning: "float8store" redefined
/opt/php-5.3.0/ext/mysqlnd/mysqlnd_portability.h:413:1: warning: this is the location of the previous definition
/opt/php-5.3.0/ext/mysqlnd/mysqlnd_ps_codec.c: In function `ps_fetch_from_1_to_8_bytes':
/opt/php-5.3.0/ext/mysqlnd/mysqlnd_ps_codec.c:82: error: `MYSQLND_LLU_SPEC' undeclared (first use in this function)
/opt/php-5.3.0/ext/mysqlnd/mysqlnd_ps_codec.c:82: error: (Each undeclared identifier is reported only once
/opt/php-5.3.0/ext/mysqlnd/mysqlnd_ps_codec.c:82: error: for each function it appears in.)
/opt/php-5.3.0/ext/mysqlnd/mysqlnd_ps_codec.c:111: error: `MYSQLND_LL_SPEC' undeclared (first use in this function)
gmake: *** [ext/mysqlnd/mysqlnd_ps_codec.lo] Error 1



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-07-03 22:52 UTC] mstanger at sfu dot ca
Same environment, same failure:  this is my config line: 

./configure --prefix /usr/local/php5 --with-openssl=/usr/LOCAL/ssl --
with-zlib=/usr/LOCAL --with-curl --enable-ftp --with-mysql=mysqlnd --
with-pdo-mysql=mysqlnd  --with-xsl=/usr/local/php5 --with-gd --with-
jpeg-dir=/usr/local --with-png-dir=/usr/local --with-mcrypt=/usr/local 
--enable-exif --enable-sqlite-utf8 --enable-zip  --with-pear --with-
libxml-dir=/usr/local/php5

and my result (looks much like the one reported)

In file included from /usr/local/src/php/php-
5.3.0/ext/mysqlnd/mysqlnd.h:59,
                 from /usr/local/src/php/php-
5.3.0/ext/mysqlnd/mysqlnd_palloc.c:23:
/usr/local/src/php/php-5.3.0/ext/mysqlnd/mysqlnd_portability.h:471:1: 
warning: "float8get" redefined
/usr/local/src/php/php-5.3.0/ext/mysqlnd/mysqlnd_portability.h:423:1: 
warning: this is the location of the previous definition
/usr/local/src/php/php-5.3.0/ext/mysqlnd/mysqlnd_portability.h:472:1: 
warning: "float8store" redefined
/usr/local/src/php/php-5.3.0/ext/mysqlnd/mysqlnd_portability.h:413:1: 
warning: this is the location of the previous definition
/bin/sh /usr/local/src/php/php-5.3.0/libtool --silent --preserve-dup-
deps --mode=compile gcc  -Iext/mysqlnd/ -I/usr/local/src/php/php-
5.3.0/ext/mysqlnd/ -DPHP_ATOM_INC -I/usr/local/src/php/php-
5.3.0/include -I/usr/local/src/php/php-5.3.0/main -
I/usr/local/src/php/php-5.3.0 -I/usr/local/src/php/php-
5.3.0/ext/date/lib -I/usr/local/src/php/php-5.3.0/ext/ereg/regex -
I/usr/local/php5/include/libxml2 -I/usr/LOCAL/ssl/include -
I/usr/LOCAL/include -I/usr/local/include -I/usr/local/src/php/php-
5.3.0/ext/sqlite3/libsqlite -I/usr/local/php5/include -
I/usr/local/src/php/php-5.3.0/TSRM -I/usr/local/src/php/php-5.3.0/Zend  
-D_POSIX_PTHREAD_SEMANTICS  -I/usr/local/include  -c 
/usr/local/src/php/php-5.3.0/ext/mysqlnd/mysqlnd_ps_codec.c -o 
ext/mysqlnd/mysqlnd_ps_codec.lo 
In file included from /usr/local/src/php/php-
5.3.0/ext/mysqlnd/mysqlnd.h:59,
                 from /usr/local/src/php/php-
5.3.0/ext/mysqlnd/mysqlnd_ps_codec.c:23:
/usr/local/src/php/php-5.3.0/ext/mysqlnd/mysqlnd_portability.h:471:1: 
warning: "float8get" redefined
/usr/local/src/php/php-5.3.0/ext/mysqlnd/mysqlnd_portability.h:423:1: 
warning: this is the location of the previous definition
/usr/local/src/php/php-5.3.0/ext/mysqlnd/mysqlnd_portability.h:472:1: 
warning: "float8store" redefined
/usr/local/src/php/php-5.3.0/ext/mysqlnd/mysqlnd_portability.h:413:1: 
warning: this is the location of the previous definition
/usr/local/src/php/php-5.3.0/ext/mysqlnd/mysqlnd_ps_codec.c: In 
function `ps_fetch_from_1_to_8_bytes':
/usr/local/src/php/php-5.3.0/ext/mysqlnd/mysqlnd_ps_codec.c:82: error: 
`MYSQLND_LLU_SPEC' undeclared (first use in this function)
/usr/local/src/php/php-5.3.0/ext/mysqlnd/mysqlnd_ps_codec.c:82: error: 
(Each undeclared identifier is reported only once
/usr/local/src/php/php-5.3.0/ext/mysqlnd/mysqlnd_ps_codec.c:82: error: 
for each function it appears in.)
/usr/local/src/php/php-5.3.0/ext/mysqlnd/mysqlnd_ps_codec.c:111: 
error: `MYSQLND_LL_SPEC' undeclared (first use in this function)
make: *** [ext/mysqlnd/mysqlnd_ps_codec.lo] Error 1
 [2009-08-25 14:14 UTC] svn@php.net
Automatic comment from SVN on behalf of andrey
Revision: http://svn.php.net/viewvc/?view=revision&revision=287694
Log: Fix bug#48198 error: 'MYSQLND_LLU_SPEC' undeclared
Possibly fix also :
Bug #48780  	mysqlnd compile failure
Bug #46952  	mysqlnd compile failure with suncc
 [2009-08-25 14:25 UTC] svn@php.net
Automatic comment from SVN on behalf of andrey
Revision: http://svn.php.net/viewvc/?view=revision&revision=287695
Log: MFH:

Fix bug#48198 error: 'MYSQLND_LLU_SPEC' undeclared
Possibly fix also :
Bug #48780      mysqlnd compile failure
Bug #46952      mysqlnd compile failure with suncc
 [2009-08-25 14:26 UTC] andrey@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 20 11:00:02 2026 UTC