MFH:

Fix bug#48198 error: 'MYSQLND_LLU_SPEC' undeclared
Possibly fix also :
Bug #48780      mysqlnd compile failure
Bug #46952      mysqlnd compile failure with suncc